2008-07-23 Chris Allegretta <chrisa@asty.org>
	* text.c: Reset openfile-> to OTHER after an undo or redo so we don't mistakenly
	  mistakenly think this is an update when it's really an add.  Also
          Fix an extra ; after an if statement which makes nano try to free a struct which
          may be NULL

GNU nano 2.1.3 - 2008.08.04
2008-07-23 Chris Allegretta <chrisa@asty.org>
	* configure.ac: Add ncursesw dir to include path if lib detected

2008-07-11 Mike Frysinger <vapier@gentoo.org>
	* doc/nanorc.sample.in: Include the updates files in the default sample nanorc.

2008-07-11 Fabian Groffen <grobian@gentoo.org>
	* nano.c: Don't include langinfo.h if not using ENABLE_UTF8
	  (Savannah patch 6565)

2008-07-11 Mitsuya Shibata <mty.shibata@gmail.com>
	* text.c: Fix crashing in help menu when using certain locales
	  (Savannah bug 23751)

2008-07-09 Chris Allegretta <chrisa@asty.org>
        * nano.c/nano.h/global.c/text.c: New generalized undo code, currently
	  just works for adding and deleting text and splitting and unsplitting lines.

2008-06-29 Chris Allegretta <chrisa@asty.org>
	* global.c: Fix for not having search history when --disable-justify is used
	  (Savannah bug 23733)


GNU nano 2.1.2 - 2008.06.24
2008-06-24 Chris Allegretta <chrisa@asty.org>
	* rcfile.c: Added function check_bad_binding() to look for sequences which
	  shouldn't be bound, per Savannah bug 22674.

2008-05-31 Chris Allegretta <chrisa@asty.org>
	* prompt.c,search.c,global.c: Tentative fix for bug #23144: using arrow 
	  keys in search buffer affects main window (by Mike Frysinger)

2008-05-31 Chris Allegretta <chrisa@asty.org>
	* global.c: Fix for Savannah bug #23442: left/right arrow keys 
	  do not work with --enable-tiny (by Mike Frysinger)

2008-05-31 Chris Allegretta <chrisa@asty.org>
	* files.c,proto.h,text.c: Fix for conflicts with AIX curses
	  variables, from William Jojo <jojowil@hvcc.edu>

2008-05-31 Chris Allegretta <chrisa@asty.org>